instructions bar